src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Campaign_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign_Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_Members__c</fullName>
        <label>Count Members</label>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>Acquisition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SBD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upsell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Success</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dialer_Priority__c</fullName>
        <description>Used by the dialer to determine sort order in a call list.</description>
        <inlineHelpText>Use to prioritize Salesforce campaigns of the same Dialer Type. Lower numbered campaigns will be called first.</inlineHelpText>
        <label>Dialer Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dialer_Type__c</fullName>
        <description>Used by the dialer to determine which dialer call list table to load members to. The dialer is looking that the first two digits can be cast as a number to prioritize leads in multiple dialer types. The second string indicates the team this will be routed to and the last string indicates the type of campaign that this will run under.</description>
        <inlineHelpText>Select the dialer campaign that you would like the members of this salesforce campaign loaded to.</inlineHelpText>
        <label>Dialer Type</label>
        <picklist>
            <picklistValues>
                <fullName>00. AdminTest - Preview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01. SDR - Preview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02. SDR - Predictive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03. SDR Europe - Preview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04. SDR APAC - Preview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05. SDR - Magento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06. SDR - Miva</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07. SDR - Yahoo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Initial_Sync_to_Dialer_Count__c</fullName>
        <description>Manually populated field indicating the initial count of callable leads in a specific SFDC campaign.</description>
        <inlineHelpText>Manually populated field indicating the initial count of callable leads in a specific SFDC campaign.</inlineHelpText>
        <label>Initial Sync to Dialer Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Link_to_Campaign_Brief__c</fullName>
        <description>Insert a link to the Campaign Brief related to this campaign</description>
        <inlineHelpText>Insert a link to the Campaign Brief related to this campaign</inlineHelpText>
        <label>Link to Campaign Brief</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Non_Sales_Campaign_Revenue__c</fullName>
        <description>Campaign revenue earned without sales contact (separate from opportunity revenue)</description>
        <label>Non Sales Campaign Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Campaign_Revenue__c</fullName>
        <description>Total Campaign Revenue earned from Sales rep touch (separate from what is in the opportunity)</description>
        <label>Sales Campaign Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sync_to_Dialer__c</fullName>
        <description>Used to load campaign contacts into I3 dialer</description>
        <inlineHelpText>Used to load campaign contacts into I3 dialer. Set to Review to include in reporting for review by Sales &amp; Marketing management. Set to Approved for the dialer to automatically load.</inlineHelpText>
        <label>Sync to Dialer</label>
        <picklist>
            <picklistValues>
                <fullName>Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved w Override</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X1st_Sync_to_Dialer__c</fullName>
        <description>Date at which the campaign was first synced to a dialer campaign</description>
        <inlineHelpText>Date at which the campaign was first synced to a dialer campaign</inlineHelpText>
        <label>1st Sync to Dialer</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>ACQ_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>PARENT_NAME</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.TOTAL_NUM_LEADS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>consolidated</value>
        </filters>
        <label>ACQ Combined Campaigns</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>PARENT_NAME</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.NUM_CONVERTED_LEADS</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
        <columns>CAMPAIGN.NUM_WON_OPPORTUNITIES</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>AllCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CAMPAIGN.LAST_UPDATE</columns>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <columns>Department__c</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>PARENT_NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Campaigns</label>
    </listViews>
    <listViews>
        <fullName>ClientSuccess_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>PARENT_NAME</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.TOTAL_NUM_LEADS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>cs:</value>
        </filters>
        <label>Client Success Campaigns</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>Dialer_Sync_Campaigns_Approved</fullName>
        <columns>Dialer_Priority__c</columns>
        <columns>CAMPAIGN.NAME</columns>
        <columns>Count_Members__c</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>Sync_to_Dialer__c</columns>
        <columns>Dialer_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sync_to_Dialer__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CAMPAIGN.STATUS</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <label>Dialer Sync Campaigns - Approved</label>
        <sharedTo>
            <role>SystemAdministrator</role>
            <role>VP_of_Sales</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Dialer_Sync_Campaigns_Review</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>Sync_to_Dialer__c</columns>
        <columns>Count_Members__c</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>Dialer_Type__c</columns>
        <columns>Dialer_Priority__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sync_to_Dialer__c</field>
            <operation>equals</operation>
            <value>Review</value>
        </filters>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CAMPAIGN.STATUS</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <label>Dialer Sync Campaigns - Review</label>
        <sharedTo>
            <role>SystemAdministrator</role>
            <role>VP_of_Sales</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MKT_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>PARENT_NAME</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.TOTAL_NUM_LEADS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>mkt</value>
        </filters>
        <label>MKT Campaigns</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>Orion_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>PARENT_NAME</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.TOTAL_NUM_LEADS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>orion</value>
        </filters>
        <label>Orion Campaigns</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>PAR_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>PARENT_NAME</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.TOTAL_NUM_LEADS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>par</value>
        </filters>
        <label>PAR Campaigns</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>PRE_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>PARENT_NAME</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.TOTAL_NUM_LEADS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>pre</value>
        </filters>
        <label>PRE Campaigns</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>UPS_Bundle_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>PARENT_NAME</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.LAST_UPDATE</columns>
        <columns>CAMPAIGN.TOTAL_NUM_LEADS</columns>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>bundle</value>
        </filters>
        <label>UPS Bundle Campaigns</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>UPS_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <columns>PARENT_NAME</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.TOTAL_NUM_LEADS</columns>
        <columns>Non_Sales_Campaign_Revenue__c</columns>
        <columns>Sales_Campaign_Revenue__c</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>ups:</value>
        </filters>
        <label>UPS Campaigns</label>
        <sharedTo>
            <role>Shared_Services</role>
        </sharedTo>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>